# ferret

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .markdownlint.yaml  .prettierignore  .prettierrc  AGENTS.md  CMakeLists.txt  README.md  flake.nix  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: benchmarks.yml  build.yml  ci.yml  codeql.yml  lint.yml  nix.yml  python.yml  sanitizers.yml  zizmor.yml
benchmarks/: bias_conditional_branch_count.cpp  branch_history_footprint.cpp  dependent_chain_throughput.cpp  direct_branch_footprint.cpp  nested_call_depth.cpp  train_betray_latency.cpp
docs/: README.md  android.md  architecture.md  build.md  cli.md  contributing.md  writing-a-benchmark.md
docs/benchmarks/: bias_conditional_branch_count.md  branch_history_footprint.md  dependent_chain_throughput.md  direct_branch_footprint.md  nested_call_depth.md  train_betray_latency.md
docs/superpowers/plans/: 2026-05-09-ferret-v1.md  2026-05-11-auto-formatter.md  2026-05-11-history-rewrite.md  2026-05-12-main-decompose.md  2026-05-12-nested-call-depth.md  2026-05-14-doc-restructure.md  2026-05-14-geom-range-axis.md  2026-05-14-plot-redesign.md  2026-05-17-branch-history-footprint.md  2026-05-18-surface-plot.md  2026-05-18-tier1-refactor.md  2026-05-19-branch-taken-prob.md  2026-05-19-plotly-engine.md  2026-05-20-bias-conditional-branch-count.md  2026-05-22-android-workflow.md  2026-05-27-train-betray-latency.md
docs/superpowers/specs/: 2026-05-09-ferret-design.md  2026-05-11-auto-formatter-design.md  2026-05-11-history-rewrite-design.md  2026-05-12-main-decompose-design.md  2026-05-12-nested-call-depth-design.md  2026-05-12-ras-depth-kernel-pattern.md  2026-05-14-doc-restructure-design.md  2026-05-14-geom-range-axis-design.md  2026-05-14-plot-redesign-design.md  2026-05-17-branch-history-footprint-design.md  2026-05-18-surface-plot-design.md  2026-05-19-branch-taken-prob-design.md  2026-05-19-plotly-engine-design.md  2026-05-20-bias-conditional-branch-count-design.md  2026-05-22-android-workflow-design.md  2026-05-27-train-betray-latency-design.md
include/ferret/: axis.hpp  bench_helpers.hpp  benchmark.hpp  cli_axis.hpp  csv.hpp  freq.hpp  jit.hpp  log.hpp  padding.hpp  params.hpp  parse.hpp  permute.hpp  pinning.hpp  run_command.hpp  runner.hpp  sweep.hpp  timing.hpp
nix/: ferret.nix  sljit.nix
scripts/: format.sh  freq.py  lint.sh  plot.py  run_benchmarks.sh  test_py.sh  write_dependent_chain_markdown.py
scripts/ferret_plot/: __init__.py  cli.py  columns.py  errors.py  formatting.py  markdown.py  output.py  registry.py
scripts/ferret_plot/kinds/: __init__.py  _shared.py  facets.py  heatmap.py  line.py  surface.py
src/: axis.cpp  benchmark_registry.cpp  cli_axis.cpp  csv.cpp  freq.cpp  jit.cpp  log.cpp  main.cpp  padding.cpp  params.cpp  parse.cpp  permute.cpp  run_command.cpp  runner.cpp  sweep.cpp
src/output/: csv.cpp
src/padding/: aarch64.cpp  x86_64.cpp
src/pinning/: linux.cpp  macos.cpp  posix_common.cpp
src/timing/: aarch64.cpp  calibrate.cpp  x86_64.cpp
tests/: CMakeLists.txt  sljit_test_helpers.hpp  test_bench_helpers.cpp  test_benchmark_registry.cpp  test_bias_conditional_branch_count.cpp  test_branch_history_footprint.cpp  test_cli_axis.cpp  test_csv.cpp  test_deps_link.cpp  test_direct_branch_footprint.cpp  test_freq.cpp  test_integration.cpp  test_jit.cpp  test_nested_call_depth.cpp  test_padding.cpp  test_params_axis.cpp  test_parse.cpp  test_permute.cpp  test_pinning.cpp  test_run_options.cpp  test_runner.cpp  test_smoke.cpp  test_sweep.cpp  test_timing.cpp  test_train_betray_latency.cpp
tests/python/: conftest.py  fixtures.py  test_benchmark_ci_contract.py  test_cli.py  test_columns.py  test_facets.py  test_heatmap.py  test_integration_export.py  test_line.py  test_markdown.py  test_output.py  test_registry.py  test_schema_contract.py  test_shared_grid.py  test_surface.py
